--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "aws-sdk": "^2.197.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "eslint": "^4.18.0",
@@ -61,12 +62,9 @@
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-uglify": "^6.0.0",
-    "rollup-plugin-uglify-es": "0.0.1",
+    "rollup-plugin-terser": "^3.0.0",
     "semantic-release": "^15.9.16",
-    "sinon": "^4.3.0",
-    "uglify-es": "^3.3.9",
-    "aws-sdk": "^2.197.0"
+    "sinon": "^4.3.0"
   },
   "peerDependencies": {
     "aws-sdk": "^2.197.0"
