--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "eslint-plugin-react": "^7.11.0",
     "husky": "^1.1.0",
     "mocha": "^5.0.4",
+    "pg": "^7.5.0",
+    "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "rollup": "^0.66.2",
     "rollup-plugin-commonjs": "^9.1.8",
@@ -64,10 +66,13 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-terser": "^3.0.0",
     "semantic-release": "^15.9.16",
-    "sinon": "^4.3.0"
+    "sinon": "^4.3.0",
+    "uglify-es": "^3.3.9"
   },
   "peerDependencies": {
-    "aws-sdk": "^2.197.0"
+    "pg": "^7.5.0",
+    "aws-sdk": "^2.197.0",
+    "pg-pool": "^2.0.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -75,6 +80,7 @@
     "google-protobuf": "^3.5.0",
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
+    "node-sqlparser": "^1.0.4",
     "shimmer": "^1.2.0",
     "uuid4": "^1.0.0"
   }
