--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.11.0",
     "husky": "^1.1.0",
     "mocha": "^5.0.4",
+    "mongodb": "^3.1.13",
     "pg": "^7.6.0",
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
