--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "husky": "^1.1.0",
     "mocha": "^5.0.4",
     "mongodb": "^3.1.13",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "pg": "^7.6.0",
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
