fix(package.json): just-extend vuln issue

--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "rollup-plugin-terser": "^3.0.0",
     "semantic-release": "^15.9.16",
     "sinon": "^4.3.0",
-    "uglify-es": "^3.3.9"
+    "uglify-es": "^3.3.9",
+    "just-extend": ">=4.0.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
