--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.11.0",
     "husky": "^1.1.0",
+    "lolex": "^3.0.0",
     "mocha": "^5.0.4",
     "mongodb": "^3.1.13",
     "mysql": "^2.16.0",
@@ -65,7 +66,7 @@
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "redis": "^2.8.0",
-    "rollup": "^0.66.2",
+    "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.1.0",
