fix(acceptance): dont run eslint on acceptance tests

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha --recursive test/unit_tests",
-    "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/ ./index.js -f table --ext .js --ext .jsx",
+    "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
     "build:dev": "rollup -c",
     "build": "NODE_ENV=production rollup -c",
