--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "Epsagon Team <support@epsagon.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --recursive test/",
-    "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/ ./index.js -f table --ext .js --ext .jsx",
+    "test": "mocha --recursive test/unit_tests",
+    "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
     "build:dev": "rollup -c",
     "build": "NODE_ENV=production rollup -c",
