--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.11.0",
+    "express": "^4.16.4",
     "husky": "^1.1.0",
     "lolex": "^3.0.0",
     "mocha": "^5.0.4",
@@ -71,7 +72,7 @@
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-terser": "^3.0.0",
-    "semantic-release": "^15.9.16",
+    "semantic-release": "^15.13.12",
     "sinon": "^4.3.0",
     "uglify-es": "^3.3.9"
   },
