--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.11.0",
     "express": "^4.16.4",
+    "hapi": "^18.1.0",
     "husky": "^1.1.0",
     "lolex": "^3.0.0",
     "mocha": "^5.0.4",
