--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test": "mocha --recursive test/unit_tests",
     "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
-    "build:dev": "rollup -c",
-    "build": "NODE_ENV=production rollup -c",
+    "build:dev": "./scripts/build_peg.sh && rollup -c",
+    "build": "./scripts/build_peg.sh && NODE_ENV=production rollup -c",
     "clean": "rm -r dist/",
     "prepublishOnly": "npm run build",
     "semantic-release": "semantic-release"
@@ -62,6 +62,7 @@
     "mongodb": "^3.1.13",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "pegjs": "^0.10.0",
     "pg": "^7.6.0",
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
