--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "redis": "^2.8.0",
+    "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-eslint": "^5.0.0",
