--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Epsagon Team <support@epsagon.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --recursive test/unit_tests",
+    "test": "./scripts/run_tests.sh",
     "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
     "build:dev": "./scripts/build_peg.sh && rollup -c",
