--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Epsagon Team <support@epsagon.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --recursive test/unit_tests",
+    "test": "./scripts/run_tests.sh",
     "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
     "build:dev": "./scripts/build_peg.sh && rollup -c",
@@ -67,6 +67,7 @@
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "redis": "^2.8.0",
+    "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-eslint": "^5.0.0",
