--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ jobs:
 
 stages:
   - Test
-  - acceptance
+  - name; acceptance
+    if: branch IN (master) AND type = pull_request
   - name: build-and-deploy
     if: branch = master AND type = push
