--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 
+branches:
+  only:
+    - master
+    - develop
+
 install:
   - npm install
   - npm install -g serverless
@@ -30,7 +35,7 @@ jobs:
 
 stages:
   - Test
-  - name; acceptance
+  - name: acceptance
     if: branch = master AND type = pull_request
   - name: build-and-deploy
     if: branch = master AND type = push
