--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
 
 stages:
   - Test
-  - name; acceptance
+  - name: acceptance
     if: branch = master AND type = pull_request
   - name: build-and-deploy
     if: branch = master AND type = push
