--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     }
   },
   "devDependencies": {
+    "@babel/runtime": "^7.4.5",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
