feat(ignore-keys): run build_peg script before test

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Epsagon Team <support@epsagon.com>",
   "license": "MIT",
   "scripts": {
+    "pretest": "./scripts/build_peg.sh",
     "test": "./scripts/run_tests.sh",
     "lint:js": "eslint --max-warnings=0 ./src/ ./examples/ ./test/unit_tests ./index.js -f table --ext .js --ext .jsx",
     "lint": "npm run lint:js",
