--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-terser": "^3.0.0",
