feat(http): support connections to container http endpoints

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
     "shimmer": "^1.2.0",
+    "uuid-to-hex": "^1.0.3",
     "uuid4": "^1.0.0"
   }
 }
