--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@commitlint/cli": "^8.3.3",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@google-cloud/pubsub": "^1.2.0",
     "aws-sdk": "^2.197.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
