feat(lambda): adding support for non-error 1st callback arg

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Each line is a file pattern followed by one or more owners.
-* @galbash @adavidaia @haimrait @tvaintrob @yotamelkaslasy
+* @galbash @adavidai @haimrait @tvaintrob @yotamelkaslasy
