--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "redis": "^2.8.0",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
