--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "pg-pool": "^2.0.3",
     "proxyquire": "^2.0.1",
     "redis": "^2.8.0",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.1.8",
@@ -85,7 +86,7 @@
     "google-protobuf": "^3.5.0",
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
-    "shimmer": "^1.2.0",
+    "shimmer": "^1.2.1",
     "uuid-to-hex": "^1.0.3",
     "uuid4": "^1.0.0"
   }
