--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@commitlint/cli": "^8.3.3",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-json": "4.0.2",
+    "@rollup/plugin-replace": "2.3.1",
     "aws-sdk": "^2.197.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -71,12 +74,10 @@
     "redis": "^2.8.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.7",
-    "rollup": "^0.66.6",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-terser": "^5.2.0",
+    "rollup": "2.3.3",
+    "rollup-plugin-copy": "3.3.0",
+    "rollup-plugin-eslint": "7.0.0",
+    "rollup-plugin-terser": "5.2.0",
     "semantic-release": "^15.13.30",
     "sinon": "^4.3.0",
     "uglify-es": "^3.3.9"
