ci(owners): setting team as owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Each line is a file pattern followed by one or more owners.
-* @galbash @adavidai @haimrait @tvaintrob @yotamelkaslasy
+* @epsagon/the-good-team
