feat(winston): adding winston-cloudwatch

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "google-protobuf": "^3.5.0",
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
+    "require-in-the-middle": "^5.0.3",
     "shimmer": "^1.2.1",
     "uuid-to-hex": "^1.0.3",
     "uuid4": "^1.0.0"
