--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
+    "amqplib": "^0.5.6",
     "axios": "^0.19.0",
     "google-protobuf": "^3.5.0",
     "json.sortify": "^2.2.2",
