--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
     "aws-sdk": "^2.197.0",
+    "axios-mock-adapter": "^1.18.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^8.2.0",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
@@ -60,6 +62,8 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.11.0",
     "husky": "^1.1.0",
+    "ldap-server-mock": "^3.0.0",
+    "ldapjs": "^2.1.0",
     "lolex": "^3.0.0",
     "mocha": "^5.0.4",
     "mongodb": "^3.1.13",
