feat(ldap.js): support ldap.js bind() call
* feat(ldap.js): support ldap.js createClient

* fix(ldap.js): removed axios-mock-adapter

* fix(ldap.js):  wrapper description fix

* fix(ldap.js): wrapper description fix

* fix(ldap.js): eslint fixes

* fix(ldap.js): removed ldap server init from test

* feat(ldap.js): support ldap.js createClient

* fix(ldap.js): removed axios-mock-adapter

* fix(ldap.js):  wrapper description fix

* fix(ldap.js): wrapper description fix

* fix(ldap.js): eslint fixes

* fix(ldap.js): removed ldap server init from test

* fix(ldap.js): test fix

* fix(ldap.js): added Client metadata to event

* fix(ldap.js): lint fixes

* fix(ldap.js): fixed callback + tests

* fix(ldap.js): proper callback handling

* fix(ldap.js): fixed event.resource url structure

* fix(ldap.js): fixed metadata tags structure

* fix(ldap.js): flattened metadata

* fix(ldap.js): moved key lookup to util

* fix(ldap.js): comment on ldap test

* fix(ldap.js): move strict_dn to ldap object

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "aws-sdk": "^2.197.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^8.2.0",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
@@ -60,6 +61,8 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.11.0",
     "husky": "^1.1.0",
+    "ldap-server-mock": "^3.0.0",
+    "ldapjs": "^2.1.0",
     "lolex": "^3.0.0",
     "mocha": "^5.0.4",
     "mongodb": "^3.1.13",
