--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epsagon",
-  "version": "0.0.0-development",
+  "version": "1.88.1-beta.2",
   "description": "Epsagon Instrumentation for Node.js",
   "keywords": [
     "serverless",
