--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-terser": "^7.0.1",
     "semantic-release": "^15.13.30",
+    "semver": "^7.3.4",
     "simple-oauth2": "^4.2.0",
     "sinon": "^4.3.0",
     "uglify-es": "^3.3.9",
