--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@sinonjs/fake-timers": "^7.0.2",
     "aws-sdk": "^2.197.0",
     "body-parser": "^1.19.0",
-    "chai": "^4.1.2",
+    "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
     "eslint": "^4.18.0",
@@ -66,15 +67,14 @@
     "husky": "^1.1.0",
     "ldap-server-mock": "^3.0.0",
     "ldapjs": "^2.1.0",
-    "lolex": "^3.0.0",
-    "mocha": "^5.0.4",
+    "mocha": "^8.3.0",
     "mongodb": "^3.1.13",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "pegjs": "^0.10.0",
     "pg": "^7.6.0",
     "pg-pool": "^2.0.3",
-    "proxyquire": "^2.0.1",
+    "proxyquire": "^2.1.3",
     "randomstring": "^1.1.5",
     "redis": "^2.8.0",
     "request": "^2.88.2",
@@ -88,7 +88,7 @@
     "semantic-release": "^17.3.7",
     "semver": "^7.3.4",
     "simple-oauth2": "^4.2.0",
-    "sinon": "^4.3.0",
+    "sinon": "^9.2.4",
     "uglify-es": "^3.3.9",
     "underscore": "^1.12.0"
   },
