--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-angular": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "aws-sdk": "^2.197.0",
     "body-parser": "^1.19.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
-    "eslint": "^4.18.0",
+    "eslint": "^5.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
@@ -80,7 +82,7 @@
     "redis": "^3.1.2",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.7",
-    "rollup": "^0.66.6",
+    "rollup": "^2.52.1",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-eslint": "^5.0.0",
@@ -90,6 +92,7 @@
     "semver": "^7.3.4",
     "simple-oauth2": "^4.2.0",
     "sinon": "^4.3.0",
+    "typescript": "^4.3.4",
     "uglify-es": "^3.3.9",
     "underscore": "^1.12.0"
   },
@@ -100,6 +103,7 @@
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
     "require-in-the-middle": "^5.0.3",
+    "rollup-plugin-ts": "^1.4.0",
     "shimmer": "^1.2.1",
     "uuid-parse": "^1.1.0",
     "uuid4": "^1.0.0"
