--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "google-protobuf": "^3.5.0",
+    "google-protobuf-minified": "^1.0.4",
     "json-stringify-safe": "^5.0.1",
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
