--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "underscore": "^1.12.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "google-protobuf": "^3.5.0",
+    "axios-minified": "^1.0.2",
+    "google-protobuf-minified": "^1.0.8",
     "json-stringify-safe": "^5.0.1",
     "json.sortify": "^2.2.2",
     "md5": "^2.2.1",
