--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "proxyquire": "^2.0.1",
     "randomstring": "^1.1.5",
     "redis": "^3.1.2",
+    "memcached": "^2.2.2",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.7",
     "rollup": "^0.66.6",
