--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "underscore": "^1.12.0"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.41.0",
     "axios-minified": "^1.0.7",
     "google-protobuf-minified": "^1.0.8",
     "json-stringify-safe": "^5.0.1",
