fix(acceptance-test): load packages individually

--- a/test/acceptance/lambda-handlers/serverless.yml
+++ b/test/acceptance/lambda-handlers/serverless.yml
@@ -10,6 +10,7 @@ provider:
     STAGE: dev
     EPSAGON_DEBUG: "TRUE"
   package:
+    individually: true
     exclude:
     - './**'
     - 'node_modules/**'
