--- a/package.json
+++ b/package.json
@@ -102,7 +102,9 @@
     "underscore": "^1.12.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.49.0",
     "@aws-sdk/client-sns": "^3.41.0",
+    "@aws-sdk/util-dynamodb": "^3.49.0",
     "axios-minified": "^1.0.7",
     "google-protobuf-minified": "^1.0.8",
     "json-stringify-safe": "^5.0.1",
