fix(aws-sdk-v3): use marshall function match to aws sdk v3 (#565)
* fix(aws-sdk-v3): use marshall function match to aws sdk v3

* fix(lint-fix): rm redundant space

* fix(acceptance): big unzipped size

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-    "nyc": {
+  "nyc": {
     "check-coverage": true,
     "statements": 17,
     "branches": 13,
@@ -103,6 +103,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.41.0",
+    "@aws-sdk/util-dynamodb": "^3.49.0",
     "axios-minified": "^1.0.7",
     "google-protobuf-minified": "^1.0.8",
     "json-stringify-safe": "^5.0.1",
