--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,4 +32,17 @@ jobs:
       - run: npm ci
       - run: npm run semantic-release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+
+  publish-layers:
+    needs: publish
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - run: ./scripts/publish_layers.sh
+        env:
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
